# osu-octave

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pack-release-zip.sh
gfx/: menuBG.grit
languages/: Chinese.json  Danish.json  English.json  German.json  Italian.json  Japanese.json  Russian.json  Ryukyuan.json  Ukrainian.json
lib/: EnumIterator.h
lib/OsuParser/: OsUtils.cpp  OsUtils.h  OsuParser.cpp  OsuParser.h
livearea/: template.xml
skins/default/: skin.json
skins/yum/: skin.json
source/: defines.h  main.cpp  sys_sdl2.cpp  sys_sdl2.h  types.h
source/Beatmaps/: Beatmap.cpp  Beatmap.h  BeatmapElements.cpp  BeatmapElements.h  BeatmapManager.cpp  BeatmapManager.h  DifficultyManager.cpp  DifficultyManager.h
source/DataStorage/: Betmaps.h  DataStorage.cpp  I18n.h  Scores.h  Settings.h  Skins.h
source/GameplayElements/: DarkenOverlay.cpp  DarkenOverlay.h  HitObjectManager.cpp  HitObjectManager.h  Lifebar.cpp  Lifebar.h  Score.cpp  Score.h
source/Graphics/: GfxInfo.h  GraphicsManager.cpp  GraphicsManager.h  SpriteContainer.cpp  SpriteContainer.h  SpriteManager.cpp  SpriteManager.h  Transformation.cpp  Transformation.h  pAnimation.cpp  pAnimation.h  pDrawable.cpp  pDrawable.h  pSprite.cpp  pSprite.h  pText.cpp  pText.h
source/Helpers/: AudioManager.cpp  AudioManager.h  FileReader.cpp  FileReader.h  IO.h  InputHelper.cpp  InputHelper.h  MD5.cpp  MathHelper.cpp  MathHelper.h  OsuSliderCurves.cpp  OsuSliderCurves.h  PreviewBuffer.cpp  PreviewBuffer.h
source/HitObjects/: HitCircle.cpp  HitCircle.h  HitObject.cpp  HitObject.h  HitSlider.cpp  HitSlider.h  HitSpinner.cpp  HitSpinner.h
source/Libraries/: gfxconsole.c
source/Modes/: Mode.cpp  Mode.h  ModeAbout.cpp  ModeAbout.h  ModeLoader.cpp  ModeSettings.cpp  ModeSettings.h  Player.cpp  Player.h  SongSelect.cpp  SongSelect.h  Welcome.cpp  Welcome.h
source/Parser/: OsTypes.h  OsuParser.cpp  OsuParser.h
source/Rulesets/: Ruleset.cpp  Ruleset.h  RulesetOsu.cpp  RulesetOsu.h
source/System/: Font.hpp  GameBase.cpp  GameBase.h  GameClock.cpp  GameClock.h  ICallback.h  SDLInitializer.cpp  SDLInitializer.h  SDL_FontCache.c  SDL_FontCache.h  Settings.h  TextManager.cpp  TextManager.h
source/UIElements/: Logo.h  RadioButton.h  StringSelector.h  TernaryButton.h  UIElement.h  UIElementsManager.cpp  UIElementsManager.h  ValueSlider.h
